PyQuest/src/test/parsing/invalid/test019.ql
form label {
    if (1 == 2) {
    }
}